--- a/Day 30/css/styles.css
+++ b/Day 30/css/styles.css
@@ -44,7 +44,7 @@ html {
   
   .hole:after {
     display: block;
-    background: url(dirt.svg) bottom center no-repeat;
+    background: url('../images/dirt.svg') bottom center no-repeat;
     background-size: contain;
     content: '';
     width: 100%;
@@ -55,7 +55,7 @@ html {
   }
   
   .mole {
-    background: url('mole.svg') bottom center no-repeat;
+    background: url('../images/mole.svg') bottom center no-repeat;
     background-size: 60%;
     position: absolute;
     top: 100%;
